# ToM

./: .env.example  .gitignore  .markdownlint.jsonc  .prettierignore  Draft_ToM_Methodology.md  Final_Code.md  Final_Versions.md  Handoff Report.md  Hardening Verification Report (Mounted Secrets + Sandbox Exec Allowlist).md  Learn-Ghost_Loop_OpenClaw.md.md  Learn-Lessons_Learned_Feb16_2026.md  Learn-Path Locked by Validation.md  Lesson-OpenClaw_Phase4_Completion_Debrief_20260216.md  Lesson-OpenClaw_Phase4_Debrief_20260216.md  Lesson-OpenClaw_Phase4_Expansion_Debrief_20260216.md  Lesson-OpenClaw_Prevention_Debrief_20260216.md  Lesson-OpenClaw_SSH_Setup_Debrief_20260215.md  Lessons-Workflow_Debrief_Feb16_Complete_20260216.md  Plan-3-agent recursive workflow.md  Plan-Agent_Instructions_Phase5_3AgentWorkflow.md  Plan-AoA_Enhancement.md  Plan-Phase 4_SSH Hardening-R1.md  Plan-Phase 4_SSH Hardening.md  Plan-Phase5_MVP_Breakdown_5Layers.md  Plan-Trading_AoA.md  README.md  ToM_Brain_Research_and_Architecture.md  ToM_Framework.md  commitlint.config.cjs  eslint.config.mjs  exact_diffs.md  package-lock.json  package.json  tsconfig.json
.github/: COMMIT_CONVENTION.md
.husky/: pre-commit
.tom-workspace/: AGENTS.md  whoiam.md
automation/: hooks.md  (+9 more)
oxide-brain/: Cargo.toml  README.md
oxide-brain/src/: lib.rs  main.rs  models.rs
oxide-brain/src/ollama/: mod.rs
oxide-brain/src/patch_synthesis/: mod.rs
oxide-brain/src/policy/: mod.rs
oxide-brain/src/reasoning/: mod.rs
oxide-brain/src/risk/: mod.rs
oxide-brain/src/telemetry/: mod.rs
oxide-brain/src/validation/: mod.rs
(+178 files in other folders)
