[package]
name = "oxide-brain"
version = "0.1.0"
edition = "2021"
description = "O.X.I.D.E Rust subsystem scaffold for ToM"
license = "UNLICENSED"
publish = false

[lib]
name = "oxide_brain"
path = "src/lib.rs"

[[bin]]
name = "oxide-brain-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
